@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-07-04 Takashi
+ BUG: [ 1303166 ] crash or freeze on closing all window
+  Src: MainFrm.cpp
+
 2006-07-03 WinMerge experimental release 2.5.5.2 (cvs)
 
 2006-07-03 Kimmo
